--- a/do-vui/do-vui-8/Router1.conf
+++ b/do-vui/do-vui-8/Router1.conf
@@ -63,3 +63,18 @@ L        12.0.0.1/32 is directly connected, GigabitEthernet0/0
 C        100.0.0.100 is directly connected, Loopback0
       200.0.0.0/32 is subnetted, 1 subnets
 S        200.0.0.200 [1/0] via 12.0.0.2
+
+
+
+## Cấu hình NAT overload
+interface GigabitEthernet0/1
+ ip address 192.168.10.1 255.255.255.0
+
+access-list 1 permit any
+
+ip nat inside source list 1 interface GigabitEthernet0/0 overload
+
+interface GigabitEthernet0/0
+  ip nat outside
+interface GigabitEthernet0/1
+ ip nat inside
