--- a/network-automation/1.1-paramiko/devices.yml
+++ b/network-automation/1.1-paramiko/devices.yml
@@ -6,9 +6,12 @@
 - host: 192.168.11.12
   username: backup_user
   password: Poothe0uR3Ohziox6mos
-  device_type: arista_eos
-  secret: enable
+  device_type: cisco_ios
 - host: 192.168.11.13
+  username: backup_user
+  password: Poothe0uR3Ohziox6mos
+  device_type: cisco_ios
+- host: 192.168.11.21
   username: backup_user
   password: Poothe0uR3Ohziox6mos
   device_type: juniper_junos
